--- a/Prototype 1/views/partials/navbar.ejs
+++ b/Prototype 1/views/partials/navbar.ejs
@@ -1,7 +1,9 @@
-<nav>
-    <button>Se connecter</button>
-    <button>S'inscrire</button>
-    <img src="/imgs/whiteTransp 3.png" alt="Fitness logo">
-    <button>Nous contacter</button>
-    <button>Abonnements</button>
-</nav>
+<header>
+    <nav>
+        <button>Se connecter</button>
+        <button>S'inscrire</button>
+        <img src="/imgs/whiteTransp" alt="Fitness logo">
+        <button>Nous contacter</button>
+        <button>Abonnements</button>
+    </nav>
+</header>
