--- a/Prototype 1/views/partials/navbar.ejs
+++ b/Prototype 1/views/partials/navbar.ejs
@@ -2,8 +2,9 @@
     <nav>
         <button>Se connecter</button>
         <button>S'inscrire</button>
-        <img src="/imgs/whiteTransp" alt="Fitness logo">
+        <img src="/imgs/whiteTransp.png" alt="Fitness logo">
         <button>Nous contacter</button>
         <button>Abonnements</button>
     </nav>
 </header>
+<main>
