standarization header+styles.css (step1)

--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,11 +1,3 @@
 <%- include ("../partials/header.ejs") %>
-    <p>une citation de motivation agréable et accueillante.</p>
-    <div class="icons">
-        <button><img src="treadmill.png" alt="Treadmill"></button>
-        <button><img src="weights.png" alt="Weights"></button>
-        <button><img src="soccer.png" alt="Soccer"></button>
-        <button><img src="basketball.png" alt="Basketball"></button>
-        <button><img src="football.png" alt="Football"></button>
-    </div>
-    <button>Prochaine étape</button>
+<h1 style="text-align: center; font-size: 3rem; font-family:sans-serif">une citation de motivation agreable et accueillante</h1>
 <%- include ("../partials/footer.ejs") %>
