--- a/Prototype 1/views/partials/navbar.ejs
+++ b/Prototype 1/views/partials/navbar.ejs
@@ -1,10 +1,12 @@
-<header>
-    <nav>
-        <button>Se connecter</button>
-        <button>S'inscrire</button>
-        <img src="/imgs/whiteTransp.png" alt="Fitness logo">
-        <button>Nous contacter</button>
-        <button>Abonnements</button>
-    </nav>
-</header>
+<div class="indexHeader">
+    <div class="indexHeaderSection">
+        <button class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</button>
+        <button class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</button>
+    </div>
+    <img src="/imgs/whiteTransp.png" style="height: 14em; width: 14em;" alt="Fitness logo">
+    <div class="indexHeaderSection">
+        <button class="indexButton1"style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Nous contacter</button>
+        <button class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">Abonnements</button>
+    </div>
+</div>
 <main>
