--- a/Prototype 1/public/styles.css
+++ b/Prototype 1/public/styles.css
@@ -1,66 +1,44 @@
+
+.indexHeader{
+    display:flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 15px;
+    padding-top: 25px;
+    /*width: 100%;*/
+    height: auto;
+}
+.indexButton1{
+    height: 4rem;
+    width: 16rem;
+    background-color: #D5C069;
+    border:3px solid white;
+    color: white;
+    font-size: 1.35rem;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+.indexHeaderSection{
+    display: flex;
+}
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #333;
-    color: #fff;
-    margin: 0;
-    padding: 0;
+    margin: 0; /* Removes the default margin */
+    padding: 0; /* Removes the default padding */
+    min-height: 100%; /* Ensures the body covers at least the full height of the viewport */
+    background: linear-gradient(to bottom, #333333, #1a1a1a); /* Gradient from dark grey to darker grey */
+    background-repeat: no-repeat; /* Prevents the background from repeating */
+    background-attachment: fixed; /* Makes the background fixed during scroll */
+    color: #fff; /* Sets the default text color to white */
 }
-
-header {
-    background-color: #000;
-    padding: 10px 0;
-    text-align: center;
+.btnYellowMedium{
+    height: 4rem;
+    width: 18rem;
+    background-color: #D5C069;
+    color: white;
+    font-size: 1.35rem;
+    font-family: sans-serif;
+    font-weight: bold;
 }
-
-nav button {
-    background-color: #555;
-    border: none;
-    color: #fff;
-    padding: 10px 20px;
-    margin: 0 5px;
-    cursor: pointer;
-}
-
-nav button:hover {
-    background-color: #777;
-}
-
-nav img {
-    vertical-align: middle;
-    height: 50px;
-}
-
-main {
-    text-align: center;
-    padding: 50px 0;
-}
-
-.icons button {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.icons img {
-    height: 100px;
-    padding: 20px;
-}
-
-main button {
-    background-color: #555;
-    border: none;
-    color: #fff;
-    padding: 15px 30px;
-    margin-top: 20px;
-    cursor: pointer;
-    font-size: 1.1em;
-}
-
-main button:hover {
-    background-color: #777;
-}
-
-p {
-    font-size: 1.2em;
-    margin-bottom: 50px;
+.indexPresentation{
+    
 }
