--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,3 +1,23 @@
 <%- include ("../partials/header.ejs") %>
-<h1 style="text-align: center; font-size: 3rem; font-family:sans-serif">une citation de motivation agreable et accueillante</h1>
+<h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem;">une citation de motivation agreable et accueillante</h1>
+<div class="indexPresentation">
+    <div class="indexSportImgContainer">
+        <img src="/imgs/hockeyIcon.png">
+    </div>
+    <div class="indexSportImgContainer">
+        <img src="/imgs/dumbbellIcon.png">
+    </div>
+    <div class="indexSportImgContainer">
+        <img src="/imgs/soccerIcon.png">
+    </div>
+    <div class="indexSportImgContainer">
+        <img src="/imgs/basketIcon.png">
+    </div>
+    <div class="indexSportImgContainer">
+        <img src="/imgs/amFootIcon.png">
+    </div>
+</div>
+<div class="button-container">
+    <button class="btnYellowMedium">Prochaine etape</button>
+</div>
 <%- include ("../partials/footer.ejs") %>
