fix inscription header

--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,5 +1,5 @@
 <%- include ("../partials/header.ejs") %>
-<h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem;">une citation de motivation agreable et accueillante</h1>
+<h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem; color:white; padding-bottom: 3rem;">une citation de motivation agreable et accueillante</h1>
 <div class="indexPresentation">
     <div class="indexSportImgContainer">
         <img src="/imgs/hockeyIcon.png">
