--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -1,7 +1,23 @@
 <!--TEMPLATE PRIS ONLINE A METTRE LINK ET SRC-->
-<%- include ("../partials/header.ejs") %>
+<!DOCTYPE html>
+<html lang="en">
+<%- include ('../partials/head') %>
+
+<body>
     <link rel="stylesheet" href="/inscriptionCSS.css">
+    
     <section class="vh-100 gradient-custom background-image">
+        <div class="indexHeader">
+            <div class="indexHeaderSection">
+                <button class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</button>
+                <button class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</button>
+            </div>
+        
+            <div class="indexHeaderSection">
+                <button class="indexButton1"style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Nous contacter</button>
+                <button class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">Abonnements</button>
+            </div>
+        </div>
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
