--- a/Prototype 1/public/styles.css
+++ b/Prototype 1/public/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #333;
-    color: #fff;
+    color: #D9D9D9;
     margin: 0;
     padding: 0;
 }
@@ -64,3 +64,59 @@ p {
     font-size: 1.2em;
     margin-bottom: 50px;
 }
+
+
+.gradient-custom-2 {
+    /* fallback for old browsers */
+    background: #fccb90;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, #D5C069, #D5C069, #D5C069, #D5C069);
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, #D5C069, #D5C069, #D5C069, #D5C069);
+    }
+    
+    @media (min-width: 768px) {
+    .gradient-form {
+    height: 100vh !important;
+    }
+    }
+    @media (min-width: 769px) {
+    .gradient-custom-2 {
+    border-top-right-radius: .3rem;
+    border-bottom-right-radius: .3rem;
+    }
+    }
+
+    .indexHeader{
+        display:flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 15px;
+        padding-top: 25px;
+        /*width: 100%;*/
+        height: auto;
+    }
+    .indexButton1{
+        height: 4rem;
+        width: 16rem;
+        background-color: #D5C069;
+        border:5px solid white;
+        color: white;
+        font-size: 1.5rem;
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+    .indexHeaderSection{
+        display: flex;
+    }
+    body {
+        margin: 0; /* Removes the default margin */
+        padding: 0; /* Removes the default padding */
+        min-height: 100%; /* Ensures the body covers at least the full height of the viewport */
+        background: linear-gradient(to bottom, #333333, #1a1a1a); /* Gradient from dark grey to darker grey */
+        background-repeat: no-repeat; /* Prevents the background from repeating */
+        background-attachment: fixed; /* Makes the background fixed during scroll */
+        color: #fff; /* Sets the default text color to white */
+    }
