Réparation du merge

--- a/Prototype 1/public/styles.css
+++ b/Prototype 1/public/styles.css
@@ -1,97 +1,4 @@
 
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #333;
-    color: #D9D9D9;
-    margin: 0;
-    padding: 0;
-}
-
-.indexHeader{
-    display:flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 15px;
-    padding-top: 25px;
-    /*width: 100%;*/
-    height: auto;
-}
-.indexButton1{
-    height: 4rem;
-    width: 16rem;
-    background-color: #D5C069;
-    border:3px solid white;
-    color: white;
-    font-size: 1.35rem;
-    font-family: sans-serif;
-    font-weight: bold;
-    transition: background-color 0.3s, color 0.3s;
-    cursor: pointer;
-}
-.indexButton1:hover{
-    background-color: #A19252;
-}
-.indexHeaderSection{
-    display: flex;
-}
-body {
-    margin: 0; /* Removes the default margin */
-    padding: 0; /* Removes the default padding */
-    min-height: 100%; /* Ensures the body covers at least the full height of the viewport */
-    background: linear-gradient(to bottom, #333333, #1a1a1a); /* Gradient from dark grey to darker grey */
-    background-repeat: no-repeat; /* Prevents the background from repeating */
-    background-attachment: fixed; /* Makes the background fixed during scroll */
-    color: #fff; /* Sets the default text color to white */
-}
-.btnYellowMedium{
-    height: 4rem;
-    width: 18rem;
-    background-color: #D5C069;
-    color: white;
-    font-size: 1.35rem;
-    font-family: sans-serif;
-    font-weight: bold;
-    border-radius: 50px;
-    transition: background-color 0.3s, color 0.3s;
-    cursor: pointer;
-}
-.btnYellowMedium:hover{
-    background-color: #A19252;
-}
-.indexPresentation{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:3rem;
-    padding-bottom: 6rem;
-}
-.indexSportImgContainer{
-    width: 14rem;
-    height: 14rem; 
-    border-radius: 30px; 
-    overflow: hidden; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #D5C069; 
-    transition: background-color 0.3s, color 0.3s;
-    cursor: pointer;
-}
-.indexSportImgContainer:hover{
-    background-color: #A19252;
-}
-.indexSportImgContainer img{
-    max-width: 80%;
-    max-height: 80%;
-    padding:10%;
-    object-fit: cover;
-}
-.button-container {
-    display: flex;
-    justify-content: center;
-}
-
 
 .gradient-custom-2 {
     /* fallback for old browsers */
@@ -129,11 +36,21 @@ body {
         height: 4rem;
         width: 16rem;
         background-color: #D5C069;
-        border:5px solid white;
+        border:3px solid white;
         color: white;
-        font-size: 1.5rem;
+        font-size: 1.35rem;
         font-family: sans-serif;
         font-weight: bold;
+        transition: background-color 0.3s, color 0.3s;
+        cursor: pointer;
+        display: flex;
+        justify-content: center; /* Horizontally centers content */
+        align-items: center; /* Vertically centers content */
+        line-height: 4rem;
+        text-decoration: none;
+    }
+    .indexButton1:hover{
+        background-color: #A19252;
     }
     .indexHeaderSection{
         display: flex;
@@ -146,4 +63,52 @@ body {
         background-repeat: no-repeat; /* Prevents the background from repeating */
         background-attachment: fixed; /* Makes the background fixed during scroll */
         color: #fff; /* Sets the default text color to white */
+    }
+    .btnYellowMedium{
+        height: 4rem;
+        width: 18rem;
+        background-color: #D5C069;
+        color: white;
+        font-size: 1.35rem;
+        font-family: sans-serif;
+        font-weight: bold;
+        border-radius: 50px;
+        transition: background-color 0.3s, color 0.3s;
+        cursor: pointer;
+    }
+    .btnYellowMedium:hover{
+        background-color: #A19252;
+    }
+    .indexPresentation{
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap:3rem;
+        padding-bottom: 6rem;
+    }
+    .indexSportImgContainer{
+        width: 14rem;
+        height: 14rem;
+        border-radius: 30px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #D5C069;
+        transition: background-color 0.3s, color 0.3s;
+        cursor: pointer;
+    }
+    .indexSportImgContainer:hover{
+        background-color: #A19252;
+    }
+    .indexSportImgContainer img{
+        max-width: 80%;
+        max-height: 80%;
+        padding:10%;
+        object-fit: cover;
+    }
+    .button-container {
+        display: flex;
+        justify-content: center;
     }
