--- a/Prototype 1/views/partials/navbar.ejs
+++ b/Prototype 1/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 <div class="indexHeader">
     <div class="indexHeaderSection">
         <button class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</button>
-        <button class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</button>
+        <a href="/Inscription"class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</a>
     </div>
     <img src="/imgs/whiteTransp.png" style="height: 14em; width: 14em;" alt="Fitness logo">
     <div class="indexHeaderSection">
