--- a/Prototype 1/views/partials/navbar.ejs
+++ b/Prototype 1/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 
 <div class="indexHeader">
     <div class="indexHeaderSection">
-        <button class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</button>
+        <a href="/Connexion" class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</a>
         <a href="/Inscription"class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</a>
     </div>
 
