--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -9,8 +9,8 @@
     <section class="vh-100 gradient-custom background-image">
         <div class="indexHeader">
             <div class="indexHeaderSection">
-                <button class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</button>
-                <button class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</button>
+                <a href="/Connexion" class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Se connecter</a>
+                <a href="/Inscription"class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">S'inscrire</a>
             </div>
         
             <div class="indexHeaderSection">
