--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -10,7 +10,7 @@
                             <div class="mb-md-5 mt-md-4 pb-5">
 
                                 <h2 class="fw-bold mb-2 text-uppercase">Inscription</h2>
-                                <p class="text-white-50 mb-5">Veuyez entrer vos informations!</p>
+                                <p class="text-white-50 mb-5">Veuillez entrer vos informations!</p>
 
                                 <div class="form-outline form-white mb-4">
                                     <input type="nom" id="inputFormNom" class="form-control form-control-lg"
