--- a/Prototype 1/views/Pages/connexion.ejs
+++ b/Prototype 1/views/Pages/connexion.ejs
@@ -38,7 +38,7 @@
       
                         <div class="align-items-center justify-content-center pb-4">
                           <p class="mb-0 me-2">Vous n'avez pas un compte?</p>
-                          <button type="button" class="btn-block fa-lg mb-3">S'inscrire!</button>
+                          <button type="button" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3 top-50 start-50">S'inscrire!</button>
                         </div>
       
                       </form>
