correction de quelques details dans le css
voila hamza

--- a/Prototype 1/views/Pages/abonnement.ejs
+++ b/Prototype 1/views/Pages/abonnement.ejs
@@ -16,7 +16,7 @@
             <p>Accès limité aux programmes</p>
             <p>3 essais pour générer des programmes</p>
         </div>
-        <button type="submit">Confirmer</button>
+        <button id="but" type="submit">Confirmer</button>
     </div>
     <div class="card">
         <h2>BASIC</h2>
@@ -24,7 +24,7 @@
             <p>Accès illimté aux programmes</p>
             <p>10 essais par mois pour generer des programmes</p>
         </div>
-        <button type="submit">Confirmer</button>
+        <button id="but" type="submit">Confirmer</button>
     </div>
     <div class="card">
         <h2>PREMIUM</h2>
@@ -33,7 +33,7 @@
             <p>Accès illimté pour generer des programmes</p>
             <p>Accès aux plans de nutritions</p>
         </div>
-        <button type="submit">Confirmer</button>
+        <button id="but" type="submit">Confirmer</button>
     </div>
 </div>
  
