--- a/Prototype 1/public/abonnementCSS.css
+++ b/Prototype 1/public/abonnementCSS.css
@@ -29,7 +29,7 @@ body {
     margin: 20px 0;
   }
    
-  button {
+  #but {
     background: #000000;
     color: white;
     border: none;
@@ -52,16 +52,7 @@ body {
     /*width: 100%;*/
     height: auto;
 }
-.indexButton1{
-    height: 4rem;
-    width: 16rem;
-    background-color: #D5C069;
-    border:5px solid white;
-    color: white;
-    font-size: 1.5rem;
-    font-family: sans-serif;
-    font-weight: bold;
-}
+
 .indexHeaderSection{
     display: flex;
 }
