--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -7,7 +7,7 @@
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5 text-center" >
 
-                            <div class="mb-md-5 mt-md-4 pb-5">
+                            <form class="mb-md-5 mt-md-4 pb-5" action="/inscription/submit" method="post">
 
                                 <h2 class="fw-bold mb-2 text-uppercase">Inscription</h2>
                                 <p class="text-white-50 mb-5">Veuillez entrer vos informations!</p>
@@ -41,7 +41,7 @@
 
                                 <button type="submit" class="btn btn-outline-light btn-lg px-5" type="submit">S'inscrire</button>
 
-                            </div>
+                            </form>
 
                         </div>
                     </div>
