Changement de div a a href dans index
Changement a a href pour pouvoir former des requetes lorsque les images sont cliques.

--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,21 +1,21 @@
 <%- include ("../partials/header.ejs") %>
 <h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem; color:white; padding-bottom: 3rem;">une citation de motivation agreable et accueillante</h1>
 <div class="indexPresentation">
-    <div class="indexSportImgContainer">
+    <a name="hockey" href="/indexSport" class="indexSportImgContainer">
         <img src="/imgs/hockeyIcon.png">
-    </div>
-    <div class="indexSportImgContainer">
+    </a>
+    <a href="/indexSport" class="indexSportImgContainer">
         <img src="/imgs/dumbbellIcon.png">
-    </div>
-    <div class="indexSportImgContainer">
+    </a>
+    <a href="/indexSport" class="indexSportImgContainer">
         <img src="/imgs/soccerIcon.png">
-    </div>
-    <div class="indexSportImgContainer">
+    </a>
+    <a href="/indexSport" class="indexSportImgContainer">
         <img src="/imgs/basketIcon.png">
-    </div>
-    <div class="indexSportImgContainer">
+    </a>
+    <a href="/indexSport" class="indexSportImgContainer">
         <img src="/imgs/amFootIcon.png">
-    </div>
+    </a>
 </div>
 <div class="button-container">
     <button class="btnYellowMedium">Prochaine etape</button>
