Page indexSport + modification navbar

--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,19 +1,19 @@
 <%- include ("../partials/header.ejs") %>
 <h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem; color:white; padding-bottom: 3rem;">une citation de motivation agreable et accueillante</h1>
 <div class="indexPresentation">
-    <a name="hockey" href="/indexSport" class="indexSportImgContainer">
+    <a href="/indexSport?id_sport=1&name=hockey&image=hockeyIcon.png" class="indexSportImgContainer">
         <img src="/imgs/hockeyIcon.png">
     </a>
-    <a href="/indexSport" class="indexSportImgContainer">
+    <a href="/indexSport?id_sport=2&name=musculation&image=dumbbellIcon.png" class="indexSportImgContainer">
         <img src="/imgs/dumbbellIcon.png">
     </a>
-    <a href="/indexSport" class="indexSportImgContainer">
+    <a href="/indexSport?id_sport=3&name=football&image=soccerIcon.png" class="indexSportImgContainer">
         <img src="/imgs/soccerIcon.png">
     </a>
-    <a href="/indexSport" class="indexSportImgContainer">
+    <a href="/indexSport?id_sport=4&name=basketball&image=basketIcon.png" class="indexSportImgContainer">
         <img src="/imgs/basketIcon.png">
     </a>
-    <a href="/indexSport" class="indexSportImgContainer">
+    <a href="/indexSport?id_sport=5&name=americanFootball&image=amFootIcon.png" class="indexSportImgContainer">
         <img src="/imgs/amFootIcon.png">
     </a>
 </div>
