--- a/Prototype 1/views/Pages/connexion.ejs
+++ b/Prototype 1/views/Pages/connexion.ejs
@@ -16,18 +16,18 @@
                           style="width: 185px;" alt="logo">
                       </div>
       
-                      <form action="/event/cnx" method="post">
+                      <form action="/connexion/submit" method="post">
                         <h4>Connectez-vous sur votre compte</h4>
                         <br><br>
       
                         <div class="form-outline mb-4">
-                          <input type="email" id="form2Example11" name="username" class="form-control"
+                          <input type="email" id="adresse_mail" name="adresse_mail" class="form-control"
                             placeholder="Numéro de téléphone ou adresse e-mail" />
                           <label class="form-label" for="form2Example11">Nom d'utilisateur</label>
                         </div>
       
                         <div class="form-outline mb-4">
-                          <input type="password" id="form2Example22" name="password" class="form-control" />
+                          <input type="password" id="mdp" name="mdp" class="form-control"/>
                           <label class="form-label" for="form2Example22">Mot de passe</label>
                         </div>
       
