--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,4 +1,9 @@
 <%- include ("../partials/header.ejs") %>
+<% if (user) { %>
+    <div style="color: white; text-align: center;">
+        Logged In: <%= user.nom_client %>
+    </div>
+    <% } %>
 <h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem; color:white; padding-bottom: 3rem;">une citation de motivation agreable et accueillante</h1>
 <div class="indexPresentation">
     <a href="/indexSport?id_sport=1&name=hockey&image=hockeyIcon.png" class="indexSportImgContainer">
