Mettre le nom d'utilisateur après connexion plus grand

--- a/Prototype 1/views/Pages/index.ejs
+++ b/Prototype 1/views/Pages/index.ejs
@@ -1,7 +1,7 @@
 <%- include ("../partials/header.ejs") %>
 <% if (user) { %>
     <div style="color: white; text-align: center;">
-        Logged In: <%= user.nom_client %>
+        <h1><%= user.prenom_client %> <%= user.nom_client %></h1>
     </div>
     <% } %>
 <h1 style="text-align: center; font-size: 3rem; font-family:sans-serif; padding-top: 3rem; color:white; padding-bottom: 3rem;">une citation de motivation agreable et accueillante</h1>
