--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -39,7 +39,7 @@
                                 <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Déja inscrit?</a>
                                 </p>
 
-                                <button type="submit" class="btn btn-outline-light btn-lg px-5" type="submit">S'inscrire</button>
+                                <button type="submit" class="btn btn-outline-light btn-lg px-5" >S'inscrire</button>
 
                             </form>
 
