Navbar custom pour lorsque logged in

--- a/Prototype 1/views/partials/header.ejs
+++ b/Prototype 1/views/partials/header.ejs
@@ -3,4 +3,8 @@
 <%- include ('../partials/head') %>
 
 <body>
-	<%- include ('../partials/navbar') %>
+	<% if (user) { %>
+		<%- include ('../partials/navbarLoggedIn') %>
+    <% }else { %>
+		<%- include ('../partials/navbar') %>
+	<%}%>
