--- a/Prototype 1/views/partials/navbarLoggedIn.ejs
+++ b/Prototype 1/views/partials/navbarLoggedIn.ejs
@@ -1,7 +1,7 @@
 
 <div class="indexHeader">
     <div class="indexHeaderSection">
-        <a href="/Connexion" class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Mon Profile</a>
+        <a href="/profile" class="indexButton1" style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;">Mon Profile</a>
         <a href="/logout"class="indexButton1" style="border-top-right-radius: 50px; border-bottom-right-radius: 50px;">Deconnexion</a>
     </div>
 
