--- a/Prototype 1/views/Pages/Inscription.ejs
+++ b/Prototype 1/views/Pages/Inscription.ejs
@@ -1,4 +1,3 @@
-<!--TEMPLATE PRIS ONLINE A METTRE LINK ET SRC-->
     <%- include ("../partials/header.ejs") %>
     <link rel="stylesheet" href="/inscriptionCSS.css">
         <div class="container py-5 h-100">
@@ -36,8 +35,10 @@
 
                                 </div>
 
-                                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Déja inscrit?</a>
+                                <p class="small mb-5 pb-lg-2">
+                                    <a href="/connexion" class="text-white-50">Déjà inscrit?</a>
                                 </p>
+                                
 
                                 <button type="submit" class="btn btn-outline-light btn-lg px-5" >S'inscrire</button>
 
