--- a/Prototype 1/views/Pages/abonnement.ejs
+++ b/Prototype 1/views/Pages/abonnement.ejs
@@ -21,7 +21,7 @@
                     <button id="but1" type="submit" <% if (user.abonnement_id_abonnement == 1) { %>disabled<% } %>>Confirmer</button>
                 </form>
             <% } else { %>
-                <button id="loginButton1" type="button">Connectez-vous pour souscrire</button>
+                <button id="loginButton1" type="button">Connectez-vous pour s'abonner</button>
             <% } %>
         </div>
         <div class="card">
@@ -36,7 +36,7 @@
                     <button id="but2" type="submit" <% if (user.abonnement_id_abonnement == 2) { %>disabled<% } %>>Confirmer</button>
                 </form>
             <% } else { %>
-                <button id="loginButton2" type="button">Connectez-vous pour souscrire</button>
+                <button id="loginButton2" type="button">Connectez-vous pour s'abonner</button>
             <% } %>
         </div>
         <div class="card">
@@ -52,7 +52,7 @@
                     <button id="but3" type="submit" <% if (user.abonnement_id_abonnement == 3) { %>disabled<% } %>>Confirmer</button>
                 </form>
             <% } else { %>
-                <button id="loginButton3" type="button">Connectez-vous pour souscrire</button>
+                <button id="loginButton3" type="button">Connectez-vous pour s'abonner</button>
             <% } %>
         </div>
     </div>
@@ -60,13 +60,9 @@
 </html>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
-        // Récupérer les boutons de connexion
-        var loginButtons = document.querySelectorAll("#loginButton1, #loginButton2, #loginButton3");
-        
-        // Ajouter un gestionnaire d'événements à chaque bouton
+        var loginButtons = document.querySelectorAll("#loginButton1, #loginButton2, #loginButton3");  
         loginButtons.forEach(function(button) {
             button.addEventListener("click", function() {
-                // Rediriger l'utilisateur vers la page de connexion
                 window.location.href = "/connexion";
             });
         });
